fix: update dark mode bg image to one with more consistent star consistent, add dark filter overlay to dark mode bg to dim lighting. cleanup: set hotkeys to be off by default

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -64,13 +64,11 @@
     --ring: 200 80% 90%; /* Soft Blue */
     html, body {
       @apply bg-cover bg-fixed bg-center bg-no-repeat;
-      background-image: url('/pexels-eberhardgross-2098427.jpg');
-      /* background-position: 20% 20%; */
+      background-image: url('/olena-bohovyk-Cq5NaI0yKBE-unsplash.jpg');
     }
   }
   .light {
     html, body {
-      /* background-color: white; */
       @apply bg-cover bg-fixed bg-center bg-no-repeat;
       background-image: url('/nB460uc.jpg');
     }
